--- a/booksearch/css/index.css
+++ b/booksearch/css/index.css
@@ -348,28 +348,6 @@ html, body {
     position: fixed;
   }
 
-  #foundcounter {
-    margin: 0 0 50px 0;
-    padding: 0; 
-    color: white;
-    font-family: 'Roboto';
-    bottom: 10px;
-    width: 100%;
-    font-size: 15px;
-    position: fixed;
-  }
-
-  #foundcounterno {
-    margin: 0 0 70px 0;
-    padding: 0; 
-    color: white;
-    font-family: 'Roboto';
-    bottom: 10px;
-    width: 100%;
-    font-size: 15px;
-    position: fixed;
-  }
-
   .sidebar a:hover {
     color: gray; 
   }
@@ -404,162 +382,6 @@ html, body {
 
   .at-tjin-element .at-tjin-btn {
     transition: unset !important;
-  }
-
-/* FAB Wheel */
-  .adminActions {
-    position: fixed;
-    bottom: 35px; right: 35px;
-  }
-
-    .adminButton {
-      height: 60px;
-      width: 60px;
-      background-color: #12229d;
-      border-radius: 50%;
-      display: block;
-      color: #fff;
-      text-align: center;
-      position: relative;
-      z-index: 1;
-    }
-
-      .adminButton i {
-        font-size: 22px;
-      }
-
-    .adminButtons {
-      position: absolute;
-      width: 100%;
-      bottom: 120%;
-      text-align: center;
-    }
-
-      .adminButtons a {
-        display: block;
-        width: 45px;
-        height: 45px;
-        border-radius: 50%;
-        text-decoration: none;
-        margin: 10px auto 0;
-        line-height: 1.15;
-        color: #fff;
-        opacity: 0;
-        visibility: hidden;
-        position: relative;
-        box-shadow: 0 0 5px 1px rgba(51, 51, 51, .3);
-      }
-
-        .adminButtons a:hover {
-          transform: scale(1.05);
-        }
-
-        .adminButtons a:nth-child(1) {background-color: #ff5722; transition: opacity .2s ease-in-out .3s, transform .15s ease-in-out;}
-        .adminButtons a:nth-child(2) {background-color: #03a9f4; transition: opacity .2s ease-in-out .25s, transform .15s ease-in-out;}
-        .adminButtons a:nth-child(3) {background-color: #f44336; transition: opacity .2s ease-in-out .2s, transform .15s ease-in-out;}
-        .adminButtons a:nth-child(4) {background-color: #4CAF50; transition: opacity .2s ease-in-out .15s, transform .15s ease-in-out;}
-
-        .adminActions a i {
-          position: absolute;
-          top: 50%; left: 50%;
-          transform: translate(-50%, -50%);
-        }
-
-    .adminToggle {
-      -webkit-appearance: none;
-      position: absolute;
-      border-radius: 50%;
-      top: 0; left: 0;
-      margin: 0;
-      width: 100%;
-      height: 100%;
-      cursor: pointer;
-      background-color: transparent;
-      border: none;
-      outline: none;
-      z-index: 2;
-      transition: box-shadow .2s ease-in-out;
-      box-shadow: 0 3px 5px 1px rgba(51, 51, 51, .3);
-    }
-
-      .adminToggle:hover {
-        box-shadow: 0 3px 6px 2px rgba(51, 51, 51, .3);
-      }
-
-      .adminToggle:checked ~ .adminButtons a {
-        opacity: 1;
-        visibility: visible;
-      }
-
-/* Share Buttons */
-  .share {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .share-button {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-  }
-
-  .share-button img {
-    width: 50px;
-    height: auto;
-  }
-
-/* Preloader */
-  .preloader_bg{
-    position: fixed;
-    z-index: 999999;
-    background: #121212;
-    width: 100%;
-    height: 100%;
-  }
-
-  .preloader{
-    border: 0 soild transparent;
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-    position: absolute;
-    top: calc(50vh - 75px);
-    left: calc(50vw - 75px);
-  }
-
-  .preloader:before, .preloader:after{
-    content: '';
-    border: 1em solid #12229d;
-    border-radius: 50%;
-    width: inherit;
-    height: inherit;
-    position: absolute;
-    top: 0;
-    left: 0;
-    animation: loader 2s linear infinite;
-    opacity: 0;
-  }
-
-  .preloader:before{
-    animation-delay: .5s;
-  }
-
-  @keyframes loader{
-    0%{
-      transform: scale(0);
-      opacity: 0;
-    }
-    50%{
-      opacity: 1;
-    }
-    100%{
-      transform: scale(1);
-      opacity: 0;
-    }
   }
 
 /* Switcher */
@@ -597,34 +419,31 @@ html, body {
 
 /* Engine Switcher */
   .nav {
-    position: absolute;
-    top: 15px;
-    width: 100%;
-    height: 55px;
-    background-color: transparent;
-    display: flex;
-    justify-content: center;
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
   }
 
   .navlink {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    flex-basis: 150px;
-    overflow: hidden;
-    white-space: nowrap;
-    font-size: 14px;
-    color: white;
-    text-decoration: none;
-    -webkit-tap-highlight-color: transparent;
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
   }
 
   .navlink:hover {
-    color: #12229d;
+   background: #f1f1f1;
+   color: black;
   }
 
   .navlinkactive {
-    color: #12229d;
+  background-color: #04AA6D;
+  color: white;
   }
 
   .navicon {
@@ -643,54 +462,3 @@ html, body {
   .maindiv img {
     max-width: 75%;
   }
-
-  .nav {
-    top: unset;
-    bottom: 0px;
-  }
-
-  .sharemobile {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    margin: 15px;
-  }
-
-  .share-button-mobile {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    flex-basis: 10px;
-  }
-
-  .share-button-mobile img {
-    width: 40px;
-    height: auto;
-    margin: 0 10px 0 10px;
-  }
-
-  .sidebar {
-    visibility: hidden;
-  }
-
-  .toggle {
-    visibility: hidden;
-  }
-
-  .share {
-    visibility: hidden;
-  }
-
-  .adminActions {
-    visibility: hidden;
-  }
-}
-
-@media (min-width: 500px) {
-  .sharemobile {
-    visibility: hidden; 
-  }
-}
