--- a/Lightnovel/index.css
+++ b/Lightnovel/index.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Poiret+One|Varela+Round);
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
@@ -180,6 +178,10 @@ html, body {
   }
 
   .gsc-adBlock {
+    display: none !important;
+  }
+
+  .gs-localAd .gs-ad-marker .gs-webAd .gs-ad-marker .gsc-ad {
     display: none !important;
   }
 
